# better-wishlist

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/: cicd.yml
.github/workflows/: cicd.yml
docs/diagrams/: architecture-for-testing.drawio
src/: bot.rs  bot_util.rs  commands.rs  component.rs  components.rs  integrations.rs  interaction_manager.rs  logger.rs  main.rs  parse_util.rs  util.rs  wishlist_db.rs
src/component/: interaction_manager.rs  logger.rs  message_router.rs  wishlist_db.rs
src/components/: logger.rs  mod.rs  mongo_wishlist_db.rs  wishlist_db.rs
src/components/mocks/: mock_wishlist_db.rs  mod.rs
src/tests/util/: mod.rs  parse_util.rs
src/traits/: mod.rs  wishlist_db.rs
src/util/: either.rs  mod.rs  parse_util.rs  text_util.rs
