[package]
name = "betterwishlist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serenity = "0.12.1"
regex = "1.10.3"
chrono = "0.4.38"
poise = "0.6.1"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]
